# scrapers

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  finder.py  pypi_categories.csv  pypi_modules.html  pyproject.toml  scrappy.py
mercadoscrap/: README.md  analytics.ipynb  database.py  main.py  mercadolibre.py  visualizer.py
scrappy/: __init__.py  finder.py  scrappy.py
scrapypi/: README.md  __init__.py  finder.py  scrapypi.py
