[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = false

[tool.poetry]
name = "pypi_scraper"
version = "0.1.0"
description = "A web scraping tool to extract and categorize modules from PyPI"
authors = ["Tu Nombre <tu.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.3"
tabulate = "^0.9.0"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"