[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = false

[tool.poetry]
name = "scrapers"
version = "0.1.0"
description = "Scraping tools"
authors = ["Damian Urbano <damurbano@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.3"
tabulate = "^0.9.0"
colorama = "^0.4.6"
selenium = "^4.24.0"
sqlalchemy = "^2.0.34"
seaborn = "*" # Falta ver que onda este pack

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"